--- a/src/app/components/addoredit/addoredit.component.html
+++ b/src/app/components/addoredit/addoredit.component.html
@@ -1,4 +1,4 @@
-<clr-modal [(clrModalOpen)]="ModalOpen">
+<clr-modal [(clrModalOpen)]="ModalOpen" [clrModalClosable]="false">
     <h3 class="modal-title">Configure 3D Object</h3>
     <div class="modal-body">
         <form [formGroup]="ShapeForm">
