Add edges lines

--- a/src/app/components/display/display.component.html
+++ b/src/app/components/display/display.component.html
@@ -12,7 +12,7 @@
 
         <clr-input-container>
             <label>Select Color</label>
-            <input clrInput [(ngModel)]="color" type="color" id="color" name="color" value="#e66465">
+            <input clrInput [(ngModel)]="color" type="color" id="color" name="color">
         </clr-input-container>
 
         <div class="modal-footer">
